--- a/about.html
+++ b/about.html
@@ -8,18 +8,50 @@
 </head>
 <body>
     <nav>
-       <a href="" class="nav-item">Projects</a>
-       <a href="" class="nav-item">Wiki</a>
-       <a href="" class="nav-item">Blog</a>
-       <a href="" class="nav-item">About</a>
+        <div class="nav">
+            <a href="/projects.html" class="nav-item">Projects</a>
+            <a href="/wiki.html" class="nav-item">Wiki</a>
+            <a href="/diary/diary.html" class="nav-item">Blog</a>
+            <a href="/about.html" class="nav-item">About</a>
+        </div>
     </nav>
     <div class="container">
         
-<div id="A propos"><h1 id="A propos" class="header"><a href="#A propos">A propos</a></h1></div>
+<div id="About"><h1 id="About" class="header"><a href="#About">About</a></h1></div>
+
+<div id="About-Hire me"><h2 id="Hire me" class="header"><a href="#About-Hire me">Hire me</a></h2></div>
 
 <p>
-Ce site web est écrit et généré avec Vim et <a href="http://vimwiki.github.io">Vimwiki</a>.
+Available as a :
+</p>
+<ul>
+<li>
+full stack developper
+
+<li>
+trainer (web, creative coding)
+
+</ul>
+
+<div id="About-Work with me"><h2 id="Work with me" class="header"><a href="#About-Work with me">Work with me</a></h2></div>
+
+<p>
+Available as a :
+</p>
+<ul>
+<li>
+game design consultant (ttrpg, boardgames, team building)
+
+<li>
+music &amp; sfx producer for indie videogames
+
+<li>
+script doctor
+
+</ul>
+
 <hr />
+<p>
 <a href="index.html">index</a>
 </p>
 
