--- a/audio.html
+++ b/audio.html
@@ -8,10 +8,12 @@
 </head>
 <body>
     <nav>
-       <a href="" class="nav-item">Projects</a>
-       <a href="" class="nav-item">Wiki</a>
-       <a href="" class="nav-item">Blog</a>
-       <a href="" class="nav-item">About</a>
+        <div class="nav">
+            <a href="/projects.html" class="nav-item">Projects</a>
+            <a href="/wiki.html" class="nav-item">Wiki</a>
+            <a href="/diary/diary.html" class="nav-item">Blog</a>
+            <a href="/about.html" class="nav-item">About</a>
+        </div>
     </nav>
     <div class="container">
         
@@ -20,13 +22,26 @@
 <div id="audio-streaming"><h2 id="streaming" class="header"><a href="#audio-streaming">streaming</a></h2></div>
 
 <p>
-Listen to my music on <a href="https://bandcamp.com/noyaudur">bandcamp</a> and on
-<a href="https://soundcloud.com/noyaudur">soundcloud</a>.
+Support my music on <a href="https://bandcamp.com/noyaudur">bandcamp</a> and <a href="https://soundcloud.com/noyaudur">soundcloud</a>.
 </p>
 
-<div id="audio-software"><h2 id="software" class="header"><a href="#audio-software">software</a></h2></div>
+<div id="audio-tools"><h2 id="tools" class="header"><a href="#audio-tools">tools</a></h2></div>
 
-<div id="audio-software-music production"><h3 id="music production" class="header"><a href="#audio-software-music production">music production</a></h3></div>
+<div id="audio-tools-code"><h3 id="code" class="header"><a href="#audio-tools-code">code</a></h3></div>
+
+<ul>
+<li>
+Pyo (python library for realtime audio processing)
+
+<li>
+SuperCollider
+
+<li>
+TidalCycles
+
+</ul>
+
+<div id="audio-tools-music production"><h3 id="music production" class="header"><a href="#audio-tools-music production">music production</a></h3></div>
 
 <ul>
 <li>
@@ -35,9 +50,12 @@ Renoise
 <li>
 GlitchMachines VSTs
 
+<li>
+Pure Data
+
 </ul>
 
-<div id="audio-software-command line"><h3 id="command line" class="header"><a href="#audio-software-command line">command line</a></h3></div>
+<div id="audio-tools-command line"><h3 id="command line" class="header"><a href="#audio-tools-command line">command line</a></h3></div>
 
 <ul>
 <li>
