--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     </nav>
     <div class="container">
         
-<div id="Designer &amp; problem solver"><h2 id="Designer &amp; problem solver" class="header"><a href="#Designer &amp; problem solver">Designer &amp; problem solver</a></h2></div>
+<div id="Welcome"><h1 id="Welcome" class="header"><a href="#Welcome">Welcome</a></h1></div>
 
 <p>
-Hello, I'm Antharia Jack. And this is what I do :
+Hello, I'm <span id="Welcome-Antharia Jack"></span><strong id="Antharia Jack">Antharia Jack</strong>. And this is what I do :
 </p>
 <ul>
 <li>
@@ -32,10 +32,13 @@ I improve project and knowledge management processes.
 <li>
 I teach people how to learn.
 
+<li>
+I make people play.
+
 </ul>
  
 <p>
-You'll find notes on these fields on my <a href="wiki.html">wiki</a>.
+You'll find notes, guides and tutorials on these fields on my <a href="wiki.html">wiki</a>.
 </p>
 
 <p>
@@ -54,8 +57,13 @@ More details on my <a href="about.html">about</a> page.
 I write in french and english.
 </p>
 
+<p>
+Ask me anything. DMs on twitter are open. <a href="https://twitter.com/antharia_jack">@antharia_jack</a>
+</p>
 
-<div id="Now"><h2 id="Now" class="header"><a href="#Now">Now</a></h2></div>
+
+<div id="Welcome-Now"><h2 id="Now" class="header"><a href="#Welcome-Now">Now</a></h2></div>
+ 
 <ul>
 <li>
 Learning :
@@ -81,7 +89,7 @@ Coding :
 </ul>
 </ul>
 
-<div id="Quotes"><h2 id="Quotes" class="header"><a href="#Quotes">Quotes</a></h2></div>
+<div id="Welcome-Quotes"><h2 id="Quotes" class="header"><a href="#Welcome-Quotes">Quotes</a></h2></div>
 <blockquote>
 The cave you fear to enter holds the treasure you seek.
 </blockquote>
