--- a/projects/earthlist.html
+++ b/projects/earthlist.html
@@ -9,10 +9,10 @@
 <body>
     <nav>
         <div class="nav">
-            <a href="./projects.html" class="nav-item">Projects</a>
-            <a href="" class="nav-item">Wiki</a>
-            <a href="./diary/diary.html" class="nav-item">Blog</a>
-            <a href="./about.html" class="nav-item">About</a>
+            <a href="/projects.html" class="nav-item">Projects</a>
+            <a href="/wiki.html" class="nav-item">Wiki</a>
+            <a href="/diary/diary.html" class="nav-item">Blog</a>
+            <a href="/about.html" class="nav-item">About</a>
         </div>
     </nav>
     <div class="container">
@@ -33,16 +33,22 @@ Each task has <em>commits</em> and <em>done</em> stats.
 Tasks are sorted by the product of <em>commits</em> and <em>done</em>.
 </p>
 
-<p>
-For now I code with Django for the backend. And I'll try Svelte for the
-frontend.
-</p>
+<div id="earthlist-Technologies"><h2 id="Technologies" class="header"><a href="#earthlist-Technologies">Technologies</a></h2></div>
+<ul>
+<li>
+Django (python)
+
+<li>
+Svelte (javascript)
+
+</ul>
+
 
 <hr />
 <p>
 <a href="./">projects</a>
 <hr />
-<span id="earthlist-dev"></span><span class="tag" id="dev">dev</span>
+<span id="earthlist-Technologies-dev"></span><span class="tag" id="dev">dev</span>
 </p>
 
     </div>
