--- a/wiki.html
+++ b/wiki.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link rel="Stylesheet" type="text/css" href="style.css">
-<title>citations</title>
+<title>wiki</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -15,21 +15,19 @@
     </nav>
     <div class="container">
         
-<div id="citations"><h1 id="citations" class="header"><a href="#citations">citations</a></h1></div>
-<blockquote>
-The cave you fear to enter holds the treasure you seek.
-</blockquote>
+<div id="wiki"><h1 id="wiki" class="header"><a href="#wiki">wiki</a></h1></div>
+
+<div id="wiki-code"><h2 id="code" class="header"><a href="#wiki-code">code</a></h2></div>
+
+<div id="wiki-design"><h2 id="design" class="header"><a href="#wiki-design">design</a></h2></div>
 <p>
-Joseph Campbell
-</p>
-<blockquote>
-Learning is not the product of teaching. Learning is the product of the
-activity of learners.
-</blockquote>
-<p>
-John Holt
+PKM is for Project &amp; Knowledge Management.
 </p>
 
+<div id="wiki-learn"><h2 id="learn" class="header"><a href="#wiki-learn">learn</a></h2></div>
+
+<div id="wiki-play"><h2 id="play" class="header"><a href="#wiki-play">play</a></h2></div>
+<hr />
 <p>
 <a href="index.html">index</a>
 </p>
