--- a/projects/terminal.html
+++ b/projects/terminal.html
@@ -8,12 +8,10 @@
 </head>
 <body>
     <nav>
-        <div class="nav">
-            <a href="./projects.html" class="nav-item">Projects</a>
-            <a href="" class="nav-item">Wiki</a>
-            <a href="./diary/diary.html" class="nav-item">Blog</a>
-            <a href="./about.html" class="nav-item">About</a>
-        </div>
+            <a href="https://antharia.github.io/projects.html" class="nav-item">Projects</a>
+            <a href="https://antharia.github.io/wiki.html" class="nav-item">Wiki</a>
+            <a href="https://antharia.github.io/diary/diary.html" class="nav-item">Blog</a>
+            <a href="https://antharia.github.io/about.html" class="nav-item">About</a>
     </nav>
     <div class="container">
         
