--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@ Available as a :
 full stack developper
 
 <li>
-trainer (web, creative coding)
+data scientist
 
 </ul>
 
@@ -44,7 +44,7 @@ game design consultant (ttrpg, boardgames, team building)
 music &amp; sfx producer for indie videogames
 
 <li>
-script doctor
+script doctor (books, movies, comics and games)
 
 </ul>
 
@@ -55,7 +55,11 @@ script doctor
 
     </div>
     <footer>
-        <h2>Antharia Jack</h2>
+        <h2><a href="https://antharia.github.io">Antharia Jack</a></h2>
+        <div class="footer-links">
+            <a href="https://twitter.com/antharia_jack">twitter</a>
+            <a href="https://twitter.com/antharia_jack">twitter</a>
+        </div>
     </footer>
 </body>
 </html>
