--- a/projects/DLVR.html
+++ b/projects/DLVR.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="Stylesheet" type="text/css" href="style.css">
-<title>wiki</title>
+<link rel="Stylesheet" type="text/css" href="../style.css">
+<title>DLVR</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -15,27 +15,23 @@
     </nav>
     <div class="container">
         
-<div id="wiki"><h1 id="wiki" class="header"><a href="#wiki">wiki</a></h1></div>
+<div id="DLVR"><h1 id="DLVR" class="header"><a href="#DLVR">DLVR</a></h1></div>
 
-<div id="wiki-code"><h2 id="code" class="header"><a href="#wiki-code">code</a></h2></div>
-
-<div id="wiki-design"><h2 id="design" class="header"><a href="#wiki-design">design</a></h2></div>
 <p>
-PKM is for Project &amp; Knowledge Management.
+DLVR (pronounced DELIVER) is a mix between Beatport and Tinder.
 </p>
 
-<div id="wiki-learn"><h2 id="learn" class="header"><a href="#wiki-learn">learn</a></h2></div>
-
-<div id="wiki-play"><h2 id="play" class="header"><a href="#wiki-play">play</a></h2></div>
-
-<hr />
 <p>
-<a href="index.html">index</a>
+<a href="./">projects</a>
 </p>
 
     </div>
     <footer>
-        <h2>Antharia Jack</h2>
+        <h2><a href="https://antharia.github.io">Antharia Jack</a></h2>
+        <div class="footer-links">
+            <a href="https://twitter.com/antharia_jack">twitter</a>
+            <a href="https://twitter.com/antharia_jack">twitter</a>
+        </div>
     </footer>
 </body>
 </html>
