--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 </head>
 <body>
     <nav>
-            <a href="https://antharia.github.io/projects.html" class="nav-item">Projects</a>
-            <a href="https://antharia.github.io/wiki.html" class="nav-item">Wiki</a>
-            <a href="https://antharia.github.io/diary/diary.html" class="nav-item">Blog</a>
-            <a href="https://antharia.github.io/about.html" class="nav-item">About</a>
+        <img src="assets/avatar.png" class="avatar">
+        <a href="https://antharia.github.io/projects.html" class="nav-item">Projects</a>
+        <a href="https://antharia.github.io/wiki.html" class="nav-item">Wiki</a>
+        <a href="https://antharia.github.io/diary/diary.html" class="nav-item">Blog</a>
+        <a href="https://antharia.github.io/about.html" class="nav-item">About</a>
     </nav>
     <div class="container">
         
@@ -31,7 +32,7 @@ I improve project and knowledge management processes.
 I teach people how to learn.
 
 <li>
-I make people play.
+I help people develop their soft skills through play.
 
 </ul>
  
@@ -59,16 +60,22 @@ I write in french and english.
 Ask me anything. DMs on twitter are open. <a href="https://twitter.com/antharia_jack">@antharia_jack</a>
 </p>
 
+<p>
+This website is always a work in progress.
+</p>
 
 <div id="Welcome-Now"><h2 id="Now" class="header"><a href="#Welcome-Now">Now</a></h2></div>
  
 <ul>
 <li>
-Learning :
+Learning : 
 
 <ul>
 <li>
 Docker
+
+<li>
+Pandas and Numpy
 
 <li>
 Svelte
@@ -83,6 +90,9 @@ Coding :
 
 <li>
 <a href="projects/terminal.html">Terminal</a>
+
+<li>
+<a href="projects/DLVR.html">DLVR</a>
 
 </ul>
 </ul>
@@ -108,7 +118,11 @@ John Holt
 
     </div>
     <footer>
-        <h2>Antharia Jack</h2>
+        <h2><a href="https://antharia.github.io">Antharia Jack</a></h2>
+        <div class="footer-links">
+            <a href="https://twitter.com/antharia_jack">twitter</a>
+            <a href="https://twitter.com/antharia_jack">twitter</a>
+        </div>
     </footer>
 </body>
 </html>
