--- a/projects.html
+++ b/projects.html
@@ -29,6 +29,9 @@
 <li>
 <a href="projects/earthlist.html">Earthlist</a>
 
+<li>
+<a href="projects/DLVR.html">DLVR</a>
+
 </ul>
 <div id="projects-games"><h2 id="games" class="header"><a href="#projects-games">games</a></h2></div>
 <ul>
@@ -65,7 +68,11 @@
 
     </div>
     <footer>
-        <h2>Antharia Jack</h2>
+        <h2><a href="https://antharia.github.io">Antharia Jack</a></h2>
+        <div class="footer-links">
+            <a href="https://twitter.com/antharia_jack">twitter</a>
+            <a href="https://twitter.com/antharia_jack">twitter</a>
+        </div>
     </footer>
 </body>
 </html>
