--- a/wiki.html
+++ b/wiki.html
@@ -8,17 +8,24 @@
 </head>
 <body>
     <nav>
+        <div class="logo">
+            <a href="https://antharia.github.io"><img src="assets/avatar.png" id="avatar"></a>
+        </div>
+        <div class="nav-links">
             <a href="https://antharia.github.io/projects.html" class="nav-item">Projects</a>
             <a href="https://antharia.github.io/wiki.html" class="nav-item">Wiki</a>
             <a href="https://antharia.github.io/diary/diary.html" class="nav-item">Blog</a>
             <a href="https://antharia.github.io/about.html" class="nav-item">About</a>
+        </div>
     </nav>
     <div class="container">
         
 <div id="wiki"><h1 id="wiki" class="header"><a href="#wiki">wiki</a></h1></div>
 
-<div id="wiki-code"><h2 id="code" class="header"><a href="#wiki-code">code</a></h2></div>
-
+<div id="wiki-computer"><h2 id="computer" class="header"><a href="#wiki-computer">computer</a></h2></div>
+<p>
+<a href="computer.html">computer</a>
+</p>
 <div id="wiki-design"><h2 id="design" class="header"><a href="#wiki-design">design</a></h2></div>
 <p>
 PKM is for Project &amp; Knowledge Management.
@@ -35,7 +42,10 @@ PKM is for Project &amp; Knowledge Management.
 
     </div>
     <footer>
-        <h2>Antharia Jack</h2>
+        <h2><a href="https://antharia.github.io">Antharia Jack</a></h2>
+        <div class="footer-links">
+            <a href="https://twitter.com/antharia_jack">twitter</a>
+        </div>
     </footer>
 </body>
 </html>
