--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
 </head>
 <body>
     <nav>
-        <img src="assets/avatar.png" class="avatar">
-        <a href="https://antharia.github.io/projects.html" class="nav-item">Projects</a>
-        <a href="https://antharia.github.io/wiki.html" class="nav-item">Wiki</a>
-        <a href="https://antharia.github.io/diary/diary.html" class="nav-item">Blog</a>
-        <a href="https://antharia.github.io/about.html" class="nav-item">About</a>
+        <div class="logo">
+            <a href="https://antharia.github.io"><img src="assets/avatar.png" id="avatar"></a>
+        </div>
+        <div class="nav-links">
+            <a href="https://antharia.github.io/projects.html" class="nav-item">Projects</a>
+            <a href="https://antharia.github.io/wiki.html" class="nav-item">Wiki</a>
+            <a href="https://antharia.github.io/diary/diary.html" class="nav-item">Blog</a>
+            <a href="https://antharia.github.io/about.html" class="nav-item">About</a>
+        </div>
     </nav>
     <div class="container">
         
@@ -113,14 +117,13 @@ John Holt
 </p>
 
 <p>
-<img src="../../Documents/wiki_website/assets/creative_coding_vintage.jpg" />
+<img src="../../Documents/wiki_website/computer/assets/creative_coding_vintage.jpg" />
 </p>
 
     </div>
     <footer>
         <h2><a href="https://antharia.github.io">Antharia Jack</a></h2>
         <div class="footer-links">
-            <a href="https://twitter.com/antharia_jack">twitter</a>
             <a href="https://twitter.com/antharia_jack">twitter</a>
         </div>
     </footer>
