--- a/tutoriels/git.html
+++ b/tutoriels/git.html
@@ -8,10 +8,15 @@
 </head>
 <body>
     <nav>
+        <div class="logo">
+            <a href="https://antharia.github.io"><img src="assets/avatar.png" id="avatar"></a>
+        </div>
+        <div class="nav-links">
             <a href="https://antharia.github.io/projects.html" class="nav-item">Projects</a>
             <a href="https://antharia.github.io/wiki.html" class="nav-item">Wiki</a>
             <a href="https://antharia.github.io/diary/diary.html" class="nav-item">Blog</a>
             <a href="https://antharia.github.io/about.html" class="nav-item">About</a>
+        </div>
     </nav>
     <div class="container">
         
@@ -407,7 +412,10 @@ git clone <a href="https://github.com/libgit2/libgit2">https://github.com/libgit
 
     </div>
     <footer>
-        <h2>Antharia Jack</h2>
+        <h2><a href="https://antharia.github.io">Antharia Jack</a></h2>
+        <div class="footer-links">
+            <a href="https://twitter.com/antharia_jack">twitter</a>
+        </div>
     </footer>
 </body>
 </html>
