--- a/computer/tutoriels/pip.html
+++ b/computer/tutoriels/pip.html
@@ -9,7 +9,7 @@
 <body>
     <nav>
         <div class="logo">
-            <a href="https://antharia.github.io"><img src="assets/avatar.png" id="avatar"></a>
+            <a href="https://antharia.github.io"><img src="https://antharia.github.io/assets/avatar.png" id="avatar"></a>
         </div>
         <div class="nav-links">
             <a href="https://antharia.github.io/projects.html" class="nav-item">Projects</a>
