--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <nav>
         <div class="logo">
-            <a href="https://antharia.github.io"><img src="assets/avatar.png" id="avatar"></a>
+            <a href="https://antharia.github.io"><img src="https://antharia.github.io/assets/avatar.png" id="avatar"></a>
         </div>
         <div class="nav-links">
             <a href="https://antharia.github.io/projects.html" class="nav-item">Projects</a>
@@ -117,7 +117,7 @@ John Holt
 </p>
 
 <p>
-<img src="../../Documents/wiki_website/computer/assets/creative_coding_vintage.jpg" />
+<img src="../../Documents/wiki_website/assets/creative_coding_vintage.jpg" />
 </p>
 
     </div>
