--- a/computer.html
+++ b/computer.html
@@ -9,7 +9,7 @@
 <body>
     <nav>
         <div class="logo">
-            <a href="https://antharia.github.io"><img src="assets/avatar.png" id="avatar"></a>
+            <a href="https://antharia.github.io"><img src="https://antharia.github.io/assets/avatar.png" id="avatar"></a>
         </div>
         <div class="nav-links">
             <a href="https://antharia.github.io/projects.html" class="nav-item">Projects</a>
@@ -31,8 +31,20 @@ Des <a href="computer/livres.html">livres</a>.
 </p>
 
 <p>
-Vous trouverez ici des <a href="computer/tutoriels.html">tutoriels</a> en 30 secondes.
+Vous trouverez ici des <a href="computer/tutoriels.html">tutoriels</a> en 30 secondes, sur les
+thèmes suivants :
 </p>
+<ul>
+<li>
+python
+
+<li>
+ligne de commande
+
+</ul>
+
+
+
 
 <p>
 Revenir à l'<a href="index.html">index</a>
