--- a/index.html
+++ b/index.html
@@ -49,6 +49,14 @@ I share what I learn on my <a href="diary/diary.html">blog</a>.
 </p>
 
 <p>
+I blog about computers, programming, music, movies, and games. 
+</p>
+
+<p>
+Blog is time-based. Wiki is link-based.
+</p>
+
+<p>
 You can read about what I work on on my <a href="projects.html">projects</a> page.
 </p>
 
@@ -70,24 +78,21 @@ This website is always a work in progress.
 
 <div id="Welcome-Now"><h2 id="Now" class="header"><a href="#Welcome-Now">Now</a></h2></div>
  
-<ul>
-<li>
-Learning : 
+<p>
+I'm writing a book called "Hexer". It's in french.
+</p>
 
-<ul>
-<li>
-Docker
+<p>
+I teach Python and Django.
+</p>
 
-<li>
-Pandas and Numpy
+<p>
+I'm learning Docker.
+</p>
 
-<li>
-Svelte
-
-</ul>
-<li>
-Coding :
-
+<p>
+I work on :
+</p>
 <ul>
 <li>
 <a href="projects/earthlist.html">Earthlist</a>
@@ -98,7 +103,6 @@ Coding :
 <li>
 <a href="projects/DLVR.html">DLVR</a>
 
-</ul>
 </ul>
 
 <div id="Welcome-Quotes"><h2 id="Quotes" class="header"><a href="#Welcome-Quotes">Quotes</a></h2></div>
