--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 <body>
     <nav>
         <div class="logo">
-            <a href="https://antharia.github.io"><img src="assets/avatar.png" id="avatar"></a>
+            <a href="https://antharia.github.io"><img src="https://antharia.github.io/assets/avatar.png" id="avatar"></a>
         </div>
         <div class="nav-links">
             <a href="https://antharia.github.io/projects.html" class="nav-item">Projects</a>
@@ -22,41 +22,13 @@
         
 <div id="About"><h1 id="About" class="header"><a href="#About">About</a></h1></div>
 
-<div id="About-Hire me"><h2 id="Hire me" class="header"><a href="#About-Hire me">Hire me</a></h2></div>
-
-<p>
-Available as a :
-</p>
-<ul>
-<li>
-full stack developper
-
-<li>
-data scientist
-
-</ul>
-
-<div id="About-Work with me"><h2 id="Work with me" class="header"><a href="#About-Work with me">Work with me</a></h2></div>
-
-<p>
-Available as a :
-</p>
-<ul>
-<li>
-game design consultant (ttrpg, boardgames, team building)
-
-<li>
-music &amp; sfx producer for indie videogames
-
-<li>
-script doctor (books, movies, comics and games)
-
-</ul>
-
-<hr />
-<p>
-<a href="index.html">index</a>
-</p>
+<pre>
+    ___          __  __               _              __           __  
+   /   |  ____  / /_/ /_  ____ ______(_)___ _       / /___ ______/ /__
+  / /| | / __ \/ __/ __ \/ __ `/ ___/ / __ `/  __  / / __ `/ ___/ //_/
+ / ___ |/ / / / /_/ / / / /_/ / /  / / /_/ /  / /_/ / /_/ / /__/ ,&lt;   
+/_/  |_/_/ /_/\__/_/ /_/\__,_/_/  /_/\__,_/   \____/\__,_/\___/_/|_|  
+</pre>
 
     </div>
     <footer>
