--- a/audio.html
+++ b/audio.html
@@ -9,7 +9,7 @@
 <body>
     <nav>
         <div class="logo">
-            <a href="https://antharia.github.io"><img src="assets/avatar.png" id="avatar"></a>
+            <a href="https://antharia.github.io"><img src="https://antharia.github.io/assets/avatar.png" id="avatar"></a>
         </div>
         <div class="nav-links">
             <a href="https://antharia.github.io/projects.html" class="nav-item">Projects</a>
@@ -30,12 +30,9 @@ Support my music on <a href="https://bandcamp.com/noyaudur">bandcamp</a> and <a 
 
 <div id="audio-tools"><h2 id="tools" class="header"><a href="#audio-tools">tools</a></h2></div>
 
-<div id="audio-tools-code"><h3 id="code" class="header"><a href="#audio-tools-code">code</a></h3></div>
+<div id="audio-tools-live coding"><h3 id="live coding" class="header"><a href="#audio-tools-live coding">live coding</a></h3></div>
 
 <ul>
-<li>
-Pyo (python library for realtime audio processing)
-
 <li>
 SuperCollider
 
@@ -54,7 +51,7 @@ Renoise
 GlitchMachines VSTs
 
 <li>
-Pure Data
+Reaktor
 
 </ul>
 
