--- a/index.html
+++ b/index.html
@@ -20,75 +20,39 @@
     </nav>
     <div class="container">
         
-<div id="Welcome"><h1 id="Welcome" class="header"><a href="#Welcome">Welcome</a></h1></div>
+<div id="Antharia Jack"><h1 id="Antharia Jack" class="header"><a href="#Antharia Jack">Antharia Jack</a></h1></div>
 
 <p>
-Hello, I'm <span id="Welcome-Antharia Jack"></span><strong id="Antharia Jack">Antharia Jack</strong>. And this is what I do :
+<a href="projects.html">projects</a> | <a href="wiki.html">wiki</a> | <a href="blog.html">blog</a> | <a href="about.html">about</a> 
+</p>
+
+<p>
+<a href="computer.html">computer</a> | <a href="books.html">books</a> | <a href="music.html">music</a> | <a href="audio.html">audio</a> | <a href="bookmarks.html">bookmarks</a>
+</p>
+
+<p>
+bandcamp | soundcloud | twitter
+</p>
+
+<div id="Antharia Jack-Now"><h2 id="Now" class="header"><a href="#Antharia Jack-Now">Now</a></h2></div>
+ 
+<p>
+I watch :
 </p>
 <ul>
 <li>
-I help people solve their problems with code and design. 
-
-<li>
-I improve project and knowledge management processes.
-
-<li>
-I teach people how to learn.
-
-<li>
-I help people develop their soft skills through play.
+SICP course
 
 </ul>
- 
-<p>
-You'll find notes, guides and tutorials on these fields on my <a href="wiki.html">wiki</a>.
-</p>
 
 <p>
-I share what I learn on my <a href="diary/diary.html">blog</a>.
+I learn
 </p>
+<ul>
+<li>
+Go  
 
-<p>
-I blog about computers, programming, music, movies, and games. 
-</p>
-
-<p>
-Blog is time-based. Wiki is link-based.
-</p>
-
-<p>
-You can read about what I work on on my <a href="projects.html">projects</a> page.
-</p>
-
-<p>
-More details on my <a href="about.html">about</a> page.
-</p>
-
-<p>
-I write in french and english.
-</p>
-
-<p>
-Ask me anything. DMs on twitter are open. <a href="https://twitter.com/antharia_jack">@antharia_jack</a>
-</p>
-
-<p>
-This website is always a work in progress.
-</p>
-
-<div id="Welcome-Now"><h2 id="Now" class="header"><a href="#Welcome-Now">Now</a></h2></div>
- 
-<p>
-I'm writing a book called "Hexer". It's in french.
-</p>
-
-<p>
-I teach Python and Django.
-</p>
-
-<p>
-I'm learning Docker.
-</p>
+</ul>
 
 <p>
 I work on :
@@ -105,7 +69,7 @@ I work on :
 
 </ul>
 
-<div id="Welcome-Quotes"><h2 id="Quotes" class="header"><a href="#Welcome-Quotes">Quotes</a></h2></div>
+<div id="Antharia Jack-Quotes"><h2 id="Quotes" class="header"><a href="#Antharia Jack-Quotes">Quotes</a></h2></div>
 <blockquote>
 The cave you fear to enter holds the treasure you seek.
 </blockquote>
@@ -118,10 +82,6 @@ activity of learners.
 </blockquote>
 <p>
 John Holt
-</p>
-
-<p>
-<img src="../../Documents/wiki_website/assets/creative_coding_vintage.jpg" />
 </p>
 
     </div>
