--- a/projects.html
+++ b/projects.html
@@ -22,8 +22,8 @@
         
 <div id="projects"><h1 id="projects" class="header"><a href="#projects">projects</a></h1></div>
 
-
 <div id="projects-dev"><h2 id="dev" class="header"><a href="#projects-dev">dev</a></h2></div>
+
 <ul>
 <li>
 <a href="projects/noisedata.html">NoiseData</a>
@@ -38,7 +38,9 @@
 <a href="projects/DLVR.html">DLVR</a>
 
 </ul>
+
 <div id="projects-games"><h2 id="games" class="header"><a href="#projects-games">games</a></h2></div>
+
 <ul>
 <li>
 <a href="projects/terminal.html">Terminal</a>
@@ -47,7 +49,9 @@
 <a href="projects/carrelets.html">Carrelets</a>
 
 </ul>
+
 <div id="projects-social"><h2 id="social" class="header"><a href="#projects-social">social</a></h2></div>
+
 <ul>
 <li>
 <a href="projects/le séquenceur.html">le Séquenceur</a>
@@ -56,17 +60,20 @@
 <a href="projects/sneakernet.html">Sneakernet</a>
 
 </ul>
+
 <div id="projects-art"><h2 id="art" class="header"><a href="#projects-art">art</a></h2></div>
+
 <ul>
 <li>
-<a href="projects/photo.html">photo</a>
+<a href="projects/photo.html">Photo</a>
 
 <li>
-<a href="projects/illustration.html">illustration</a>
+<a href="projects/illustration.html">Illustration</a>
 
 </ul>
 
 <hr />
+
 <p>
 <a href="index.html">index</a>
 </p>
