--- a/projects/DLVR.html
+++ b/projects/DLVR.html
@@ -9,7 +9,7 @@
 <body>
     <nav>
         <div class="logo">
-            <a href="https://antharia.github.io"><img src="assets/avatar.png" id="avatar"></a>
+            <a href="https://antharia.github.io"><img src="https://antharia.github.io/assets/avatar.png" id="avatar"></a>
         </div>
         <div class="nav-links">
             <a href="https://antharia.github.io/projects.html" class="nav-item">Projects</a>
@@ -23,7 +23,11 @@
 <div id="DLVR"><h1 id="DLVR" class="header"><a href="#DLVR">DLVR</a></h1></div>
 
 <p>
-DLVR (pronounced DELIVER) is a mix between Beatport and Tinder.
+<span id="DLVR-DLVR"></span><strong id="DLVR">DLVR</strong> (pronounced DELIVER) is a mix between Beatport and Tinder.
+</p>
+
+<p>
+With DLVR, djs find tracks that match.
 </p>
 
 <p>
