--- a/projects/openworld.html
+++ b/projects/openworld.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link rel="Stylesheet" type="text/css" href="../style.css">
-<title>diary</title>
+<title>openworld</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -20,22 +20,31 @@
     </nav>
     <div class="container">
         
-<div id="Diary"><h1 id="Diary" class="header"><a href="#Diary">Diary</a></h1></div>
-<div id="Diary-2022"><h2 id="2022" class="header"><a href="#Diary-2022">2022</a></h2></div>
+<div id="openworld"><h1 id="openworld" class="header"><a href="#openworld">openworld</a></h1></div>
 
-<div id="Diary-2022-June"><h3 id="June" class="header"><a href="#Diary-2022-June">June</a></h3></div>
-<ul>
-<li>
-<a href="2022-06-16.html">Comment contrôler sa souris avec son clavier avec warpd ?</a>
+<p>
+<span id="openworld-Openworld"></span><strong id="Openworld">Openworld</strong> is a minimalist game engine to help you create your text-based
+openworld videogame.
+</p>
 
-</ul>
+<p>
+Main game objects are places, characters and items.
+</p>
 
-<div id="Diary-2022-April"><h3 id="April" class="header"><a href="#Diary-2022-April">April</a></h3></div>
-<ul>
-<li>
-<a href="2022-04-29.html">2022-04-29 - Premier post</a>
+<p>
+There's a console environment to help you create data for your game, place
+descriptions, character dialogs, and item features.
+</p>
 
-</ul>
+<p>
+<span id="openworld-gamedev"></span><span class="tag" id="gamedev">gamedev</span>
+</p>
+
+<hr />
+
+<p>
+<a href="./">projects</a> | <a href="terminal.html">terminal</a>
+</p>
 
     </div>
     <footer>
