--- a/projects/terminal.html
+++ b/projects/terminal.html
@@ -9,7 +9,7 @@
 <body>
     <nav>
         <div class="logo">
-            <a href="https://antharia.github.io"><img src="assets/avatar.png" id="avatar"></a>
+            <a href="https://antharia.github.io"><img src="https://antharia.github.io/assets/avatar.png" id="avatar"></a>
         </div>
         <div class="nav-links">
             <a href="https://antharia.github.io/projects.html" class="nav-item">Projects</a>
@@ -23,12 +23,18 @@
 <div id="terminal"><h1 id="terminal" class="header"><a href="#terminal">terminal</a></h1></div>
 
 <p>
-Terminal is a text-based, open-world, cyberpunk game. It's based on openworld,
-a python library.
-<hr />
-<a href="./">projects</a>
-<hr />
+Terminal is a text-based, open-world, cyberpunk game. It's based on
+<a href="openworld.html">openworld</a>, a minimalist python framework to create data for your game.
+</p>
+
+<p>
 <span id="terminal-gamedev"></span><span class="tag" id="gamedev">gamedev</span>
+</p>
+
+<hr />
+
+<p>
+<a href="./">projects</a>
 </p>
 
     </div>
